--- a/utests/CMakeLists.txt
+++ b/utests/CMakeLists.txt
@@ -8,11 +8,12 @@ mark_as_advanced(
     gtest_disable_pthreads gtest_force_shared_crt gtest_hide_internal_symbols
 )
 
-set_target_properties(gtest PROPERTIES FOLDER extern)
-set_target_properties(gtest_main PROPERTIES FOLDER extern)
-set_target_properties(gmock PROPERTIES FOLDER extern)
-set_target_properties(gmock_main PROPERTIES FOLDER extern)
+set_target_properties(gtest PROPERTIES FOLDER contrib)
+set_target_properties(gtest_main PROPERTIES FOLDER contrib)
+set_target_properties(gmock PROPERTIES FOLDER contrib)
+set_target_properties(gmock_main PROPERTIES FOLDER contrib)
 
+# As sugested by the docs: http://cliutils.gitlab.io/modern-cmake/chapters/testing/googletest.html
 macro(package_add_test TESTNAME)
     # create an executable in which the tests will be stored
     add_executable(${TESTNAME} ${ARGN})
