--- a/utests/CMakeLists.txt
+++ b/utests/CMakeLists.txt
@@ -31,3 +31,7 @@ macro(package_add_test TESTNAME)
 endmacro()
 
 package_add_test(MainTest DirectoryMonitorTest.cpp)
+
+target_link_libraries(MainTest ldmonitor)
+
+target_include_directories(MainTest PRIVATE ${PROJECT_SOURCE_DIR}/include/ldmonitor)
