--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(MySample sample.cpp)
 
+target_link_libraries(MySample ldmonitor)
 
+target_include_directories(MySample PRIVATE ${PROJECT_SOURCE_DIR}/include/)
