--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_executable(MySample sample.cpp)
 
-target_link_libraries(MySample ldmonitor)
+if(WIN32)
+	target_link_libraries(MySample ldmonitor)
+else(WIN32)
+	target_link_libraries(MySample ldmonitor stdc++fs)
+endif(WIN32)
+
+
 
 target_include_directories(MySample PRIVATE ${PROJECT_SOURCE_DIR}/include/)
