--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ if (LDMONITOR_SAMPLE_BUILD)
 endif()
 add_subdirectory(sample)    
 
-option(PACKAGE_TESTS "Build the tests" OFF)
-if(PACKAGE_TESTS)
+option(LD_MONITOR_PACKAGE_TESTS "Build the tests" OFF)
+if(LD_MONITOR_PACKAGE_TESTS)
     enable_testing()
     include(GoogleTest)
     add_subdirectory(utests)
